Sold several items

--- a/venta/index.html
+++ b/venta/index.html
@@ -48,14 +48,6 @@
         </li>
 
         <li>
-          <img src="images/cama_casa.jpeg" alt="">
-          <div class="overlay">
-            <span>Cama Casita Montesori 150cm x 90cm x 160cm de alto + Colchón 140cm x 80cm + sábanas<br>
-            Precio: <b> $ 15,000 </b></span>
-          </div>
-        </li>
-
-        <li>
           <img src="images/estanteria_cars.jpeg" alt="">
           <div class="overlay">
             <span>Biblioteca - Estantería con cajonera - Cars<br>
@@ -200,7 +192,7 @@
         <li>
           <img src="images/tech/soporte_tv.jpeg" alt="">
           <div class="overlay">
-            <span>Soporte para TV TCL - Modelo LCD-32PAR - Para modelos LCD27V8 - LCD32V8 - LCD37V8 - LCD40V8 <br>
+            <span>Soporte para TV TCL - Modelo LCD-32PAR - Para modelos LCD27V8 - LCD32V8 - LCD37V8 - LCD40V8<br>
             Precio: <b> $ 800 </b></span>
           </div>
         </li>
@@ -560,14 +552,6 @@
           <div class="overlay">
             <span>Maytalia y los inventores<br>
             Precio: <b> $ 3,000 </b></span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/libros/libro_dipper_y_mabel.jpeg" alt="">
-          <div class="overlay">
-            <span>Dipper y Mabel: La maldicion de los piratas - Elige tu propia aventura<br>
-            Precio: <b> $ 3,500 </b></span>
           </div>
         </li>
 
@@ -947,14 +931,6 @@
         </li>
 
         <li>
-          <img src="images/juegos/dream_jungle.jpeg" alt="">
-          <div class="overlay">
-            <span>Dream Jungle - 115 piezas - Electric BLockWorld No. 9902<br>
-            Precio: <b> $ 6,500 </b></span>
-          </div>
-        </li>
-
-        <li>
           <img src="images/juegos/grua_cat.jpeg" alt="">
           <div class="overlay">
             <span>Retroexcavadora CAT Importada A Control Remoto.<br>
@@ -1067,34 +1043,10 @@
         </li>
 
         <li>
-          <img src="images/juegos/connex_alarma.jpeg" alt="">
-          <div class="overlay">
-            <span>Connex Alarm System - 38823<br>
-            Precio: <b> $ 2,000 </b></span>
-          </div>
-        </li>
-
-        <li>
           <img src="images/juegos/connex_fuente.jpeg" alt="">
           <div class="overlay">
-            <span>Connex Alarm System - 38823<br>
+            <span>Connex Splashing Fountain - 38808<br>
             Precio: <b> $ 2,000 </b></span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/discovery_acuatica.jpeg" alt="">
-          <div class="overlay">
-            <span>Discovery Explore Fantasía Acuática<br>
-            Precio: <b> $ 600 </b></span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/discovery_movimiento.jpeg" alt="">
-          <div class="overlay">
-            <span>Discovery Channel Odisea de Movimiento<br>
-            Precio: <b> $ 600 </b></span>
           </div>
         </li>
 
@@ -1103,14 +1055,6 @@
           <div class="overlay">
             <span>Bakugan Battle Planet 7 En 1 Maxus Dragonoid Gigante+ Cartas<br>
             Precio: <b> $ 5,000 </b></span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/armamec_80pcs.jpeg" alt="">
-          <div class="overlay">
-            <span>Armamec Mecano Pequeños Constructores 80 Piezas<br>
-            Precio: <b> $ 1,700 </b></span>
           </div>
         </li>
 
@@ -1171,14 +1115,6 @@
         </li>
 
         <li>
-          <img src="images/juegos/escorpion.jpeg" alt="">
-          <div class="overlay">
-            <span>La clave del escorpion<br>
-            Precio: <b> $ 3,500 </b></span>
-          </div>
-        </li>
-
-        <li>
           <img src="images/juegos/cruzar_palabras.jpeg" alt="">
           <div class="overlay">
             <span>Cruzar Palabras<br>
@@ -1190,14 +1126,6 @@
           <img src="images/juegos/mini_bowling.jpeg" alt="">
           <div class="overlay">
             <span>Mini Bowling<br>
-            Precio: <b> $ 1,500 </b></span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/el_preso.jpeg" alt="">
-          <div class="overlay">
-            <span>El preso<br>
             Precio: <b> $ 1,500 </b></span>
           </div>
         </li>
@@ -1223,14 +1151,6 @@
           <div class="overlay">
             <span>Rompecabezas Cars - 70 piezas<br>
             Precio: <b> $ 1,000 </b></span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/star_wars_puzzle_48pcs.jpeg" alt="">
-          <div class="overlay">
-            <span>Rompecabezas Star Wars 48 piezas<br>
-            Precio: <b> $ 800 </b></span>
           </div>
         </li>
 
@@ -1272,14 +1192,6 @@
         <div class="container">
           <h2 id="hogar" class="heading-text"><span style='color:blue;font-weight:bold;'>Hogar</h2>
           <ul class="image-gallery">
-
-        <li>
-          <img src="images/mesa_plegable.jpeg" alt="">
-          <div class="overlay">
-            <span>Mesa Plegable Porta Laptop / Desayuno<br>
-            Precio: <b> $ 5,000 </b></span>
-          </div>
-        </li>
 
         <li>
           <img src="images/muebles/portaretrato_bebe.jpeg" alt="">
